Add redux and enabled touch DnD

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "json-api-normalizer": "^0.4.1",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
@@ -40,8 +41,15 @@
     "react-dev-utils": "^3.1.0",
     "react-dnd": "^2.4.0",
     "react-dnd-html5-backend": "^2.4.1",
+    "react-dnd-html5-touch-backend": "^1.5.0",
+    "react-dnd-multi-backend": "^3.0.3",
+    "react-dnd-touch-backend": "^0.3.13",
     "react-dom": "^15.6.1",
     "react-error-overlay": "^1.0.10",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "resolve-url-loader": "^2.1.0",
     "style": "^0.0.3",
     "style-loader": "0.18.2",
