Fetch board form fake api

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "json-api-normalizer": "^0.4.1",
+    "json-server": "^0.12.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
@@ -49,6 +50,7 @@
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
+    "redux-object": "^0.5.0",
     "redux-thunk": "^2.2.0",
     "resolve-url-loader": "^2.1.0",
     "style": "^0.0.3",
