--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jest": "20.0.4",
     "json-api-normalizer": "^0.4.1",
     "json-server": "^0.12.0",
+    "mkdirp-promise": "^5.0.1",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
@@ -65,7 +66,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "create-component": "node scripts/nc.js"
   },
   "jest": {
     "collectCoverageFrom": [
