--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
     "promise": "8.0.1",
+    "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-css-modules": "^4.7.1",
     "react-dev-utils": "^3.1.0",
@@ -53,6 +54,7 @@
     "redux-logger": "^3.0.6",
     "redux-object": "^0.5.0",
     "redux-thunk": "^2.2.0",
+    "replace-in-file": "^2.6.4",
     "resolve-url-loader": "^2.1.0",
     "style": "^0.0.3",
     "style-loader": "0.18.2",
