--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "postcss-loader": "2.0.6",
     "promise": "8.0.1",
     "prop-types": "^15.5.10",
+    "raven-js": "^3.17.0",
     "react": "^15.6.1",
     "react-css-modules": "^4.7.1",
     "react-dev-utils": "^3.1.0",
@@ -108,7 +109,12 @@
   "babel": {
     "plugins": [
       "transform-decorators-legacy",
-      ["babel-plugin-root-import", { "rootPathSuffix": "src" }]
+      [
+        "babel-plugin-root-import",
+        {
+          "rootPathSuffix": "src"
+        }
+      ]
     ],
     "presets": [
       "react-app"
