--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
-    "deploy": "git push heroku master",
+    "deploy": "git push heroku master -f",
     "g": "node scripts/generator.js"
   },
   "jest": {
