--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "json-api-normalizer": "^0.4.1",
     "json-server": "^0.12.0",
     "latest": "^0.2.0",
+    "lodash-inflection": "^1.5.0",
     "mkdirp-promise": "^5.0.1",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
