--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "prop-types": "^15.5.10",
+    "pusher-js": "^4.2.1",
     "raven-js": "^3.17.0",
     "react": "^16.0.0",
     "react-css-modules": "^4.7.1",
