--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
 export REACT_APP_API_HOST='http://localhost:5000'
+export REACT_APP_PUSHER_KEY='cfdf3c0b0c4a559c3dfe'
+export REACT_APP_PUSHER_CLUSTER='mt1'
