fixup! Add some info about env vars to README

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 # API host host
 export REACT_APP_API_HOST='http://localhost:5000'
+# To point your development enviroment to sandbox API use the host below:
+# export REACT_APP_API_HOST='https://got-board-api.herokuapp.com/'
+
 # Pusher(https://pusher.com/) is the services used to get websocket working
 to exchange messages between the API and this app, the key and the cluster
 could be found here:
