Fix .env comments

--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,8 @@ export REACT_APP_API_HOST='http://localhost:5000'
 # export REACT_APP_API_HOST='https://got-board-api.herokuapp.com/'
 
 # Pusher(https://pusher.com/) is the services used to get websocket working
-to exchange messages between the API and this app, the key and the cluster
-could be found here:
-https://dashboard.pusher.com/apps/113669/keys
+#to exchange messages between the API and this app, the key and the cluster
+#could be found here:
+#https://dashboard.pusher.com/apps/113669/keys
 export REACT_APP_PUSHER_KEY='cfdf3c0b0c4a559c3dfe'
 export REACT_APP_PUSHER_CLUSTER='mt1'
