--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "devDependencies": {
     "babel-plugin-root-import": "^5.1.0",
     "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.6"
+    "sass-loader": "^6.0.6",
+    "xray-react": "^0.4.9"
   },
   "dependencies": {
     "autoprefixer": "7.1.6",
