--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-dom": "^16.0.0",
     "react-error-overlay": "^3.0.0",
     "react-redux": "^5.0.6",
+    "react-router-dom": "^4.3.1",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-object": "^0.5.0",
