--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
     "redux-thunk": "^2.2.0",
     "replace-in-file": "^3.0.0",
     "resolve-url-loader": "^2.1.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.85.0",
     "style": "^0.0.3",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
